--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -29,6 +29,11 @@
     -fx-table-cell-border-color: #78bba1;
 }
 
+#logCtnr {
+    -fx-border-color: #D3D3D3;
+    -fx-border-width: 0 0 0 1px;
+}
+
 .table-row-cell:empty {
     -fx-background-color: transparent;
 }
@@ -61,7 +66,7 @@
 }
 
 .jfx-button:selected {
-    -fx-background-color: transparent;
+    -fx-background-color: fx-background;
 }
 
 .cancelBtn {
@@ -73,4 +78,9 @@
     -fx-background-color: #2196F3;
     -fx-background-insets: 0, 1, 2;
     -fx-padding: 0.6em;
+}
+
+.text-area {
+    -fx-font-family: "Courier New";
+    -fx-font-size: 14px;
 }
