--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -84,3 +84,30 @@
     -fx-font-family: "Courier New";
     -fx-font-size: 14px;
 }
+
+.tab-pane {
+    -fx-tab-min-height: 2.2em;
+    -fx-tab-max-height: 2.2em;
+    -fx-tab-min-width: 5em;
+}
+
+.tab .tab-label {
+    -fx-background-color: transparent;
+    -fx-alignment: CENTER-LEFT;
+    -fx-text-fill: -fx-text-base-color;
+}
+
+.tab-content-area {
+    -fx-background-color: -fx-control-inner-background;
+    -fx-padding: 0.0em;
+}
+
+.tab {
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+    -fx-padding: 0.083333em 0.5em 0.083333em 0.5em;
+}
+
+.tab:selected {
+    -fx-background-color: -fx-inner-border, -fx-body-color;
+}
