--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -29,7 +29,7 @@
     -fx-table-cell-border-color: #78bba1;
 }
 
-#logCtnr {
+#anchorPane {
     -fx-border-color: #D3D3D3;
     -fx-border-width: 0 0 0 1px;
 }
