--- a/ui/src/main/resources/fxml/configureTracker.fxml
+++ b/ui/src/main/resources/fxml/configureTracker.fxml
@@ -9,7 +9,7 @@
    <children>
       <Label layoutX="38.0" layoutY="22.0" prefHeight="21.0" prefWidth="77.0" text="Tracker IP: " />
       <JFXTextField fx:id="ipBox" alignment="CENTER" focusTraversable="false" layoutX="138.0" layoutY="14.0" prefHeight="27.0" prefWidth="136.0" />
-      <JFXButton buttonType="RAISED" layoutX="88.0" layoutY="72.0" mnemonicParsing="false" onAction="#ok" prefHeight="27.0" prefWidth="61.0" ripplerFill="#1bd79c" styleClass="okBtn" stylesheets="@../style/style.css" text="OK" />
-      <JFXButton buttonType="RAISED" layoutX="188.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" prefHeight="27.0" prefWidth="84.0" ripplerFill="#1bd79c" styleClass="cancelBtn" text="Cancel" />
+      <JFXButton id="okBtn" buttonType="RAISED" defaultButton="true" layoutX="88.0" layoutY="72.0" mnemonicParsing="false" onAction="#ok" prefHeight="27.0" prefWidth="61.0" ripplerFill="#1bd79c" stylesheets="@../style/style.css" text="OK" />
+      <JFXButton id="cancelBtn" buttonType="RAISED" cancelButton="true" layoutX="188.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" prefHeight="27.0" prefWidth="84.0" ripplerFill="#1bd79c" styleClass="cancelBtn" text="Cancel" />
    </children>
 </AnchorPane>
