Setting tab pane max width & tooltip

--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -111,6 +111,10 @@
     -fx-font-size: 14px;
 }
 
+.jfx-tab-pane {
+    -fx-tab-max-width: 100px;
+}
+
 #errorLog {
     -fx-text-fill: #D8000C;
 }
